--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
   "scripts": {
     "dev": "parcel ./src/index.html --no-cache --open",
     "start": "npm run dev",
-    "build": "parcel build ./src/index.html --public-url ./ --no-cache -d build"
+    "build": "parcel build ./src/index.html --public-url ./ --no-cache -d build",
+    "deploy": "gh-pages-deploy",
+    "clean-source": "rimraf package-lock.json dist build .htmlnanorc README.md src .postcssrc .posthtmlrc package.json"
+  },
+  "gh-pages-deploy": {
+    "staticpath": "build",
+    "post": [
+      "clean-source"
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "cssnano": "^4.1.10",
+    "autoprefixer": "~9.8.6",
+    "cssnano": "~4.1.10",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-clean-dist": "0.0.6",
     "postcss": "~8.1.4",
-    "posthtml": "^0.13.4",
-    "posthtml-modules": "^0.6.2",
-    "sass": "^1.27.0"
+    "posthtml": "~0.13.4",
+    "posthtml-modules": "~0.6.2",
+    "sass": "~1.27.0"
   }
 }
