--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "postcss": "~8.1.4",
     "posthtml": "~0.13.4",
     "posthtml-modules": "~0.6.2",
-    "sass": "~1.27.0"
+    "sass": "^1.27.2"
   }
 }
